# emotion-recognition

./: docker-compose.yml  package.json  pnpm-lock.yaml
emotion-reco-api/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
emotion-reco-api/accounts/: serializers.py  urls.py  views.py
emotion-reco-api/app/: main.py
emotion-reco-api/app/core/: database.py
emotion-reco-api/app/crud/: professors.py  records.py
emotion-reco-api/app/models/: courses.py  professors.py  records.py
emotion-reco-api/app/routes/: professors.py  records.py
emotion-reco-api/app/schemas/: professors.py  records.py
emotion-reco-api/config/: settings.py  urls.py
emotion-reco-api/course/: admin.py  models.py  serializers.py  urls.py  views.py
emotion-reco-api/course/migrations/: 0001_initial.py  0002_course_students.py
emotion-reco-api/emotion/: admin.py  models.py  serializers.py  urls.py  views.py
emotion-reco-api/emotion/migrations/: 0001_initial.py  0002_seed_emotions.py  0003_emotionrecord_student.py
emotion-reco-api/professor/: admin.py  models.py  serializers.py  urls.py  views.py
emotion-reco-api/professor/migrations/: 0001_initial.py
emotion-reco-api/src/: main.py
emotion-reco-api/src/models/: emotion_records.py
emotion-reco-api/src/routes/: records.py
emotion-reco-api/student/: admin.py  models.py  serializers.py  urls.py
emotion-reco-api/student/migrations/: 0001_initial.py
emotion-reco-web/: Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml
emotion-reco-web/src/: App.tsx
emotion-reco-web/src/api/: auth.api.ts  course.api.ts  courses.api.ts  emotion.api.ts  professors.api.ts  record.api.ts  student.api.ts
emotion-reco-web/src/core/: axios.ts
emotion-reco-web/src/pages/: Courses.tsx  Dashboard.tsx  Emotions.tsx  LoginPage.tsx  (+2 more)
(+26 files in other folders)
